--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,124 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --clr-white: hsl(0, 0%, 100%);
+  --clr-main: hsl(292, 42%, 14%);
+  --clr-bg: hsl(276, 100%, 97%);
+  --clr-gray: hsl(292, 16%, 49%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.4rem;
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  background-color: hsl(334.17deg 30.48% 85.49%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 1.5rem;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 45vh;
+  background-image: url("/public/svgs/background-pattern-desktop.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.container {
+  max-width: 50rem;
+  background: hsl(334.17deg 30.48% 85.49%);
+  color: var(--clr-main);
+  padding: 2.5rem;
+  border-radius: 10px;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.1);
+  position: relative;
+  z-index: 9999;
+}
+
+.header {
+  display: flex;
+  column-gap: 2rem;
+  margin-bottom: 2rem;
+}
+
+h1 {
+  font-size: 4.8rem;
+}
+
+.faq-box {
+  margin-top: 1rem;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+  column-gap: 3rem;
+  row-gap: 1.5rem;
+}
+
+.faq-box:not(:last-child) {
+  border-bottom: 1.5px solid var(--clr-bg);
+  padding-bottom: 1.4rem;
+}
+
+h4 {
+  font-weight: 700;
+  margin: 0.8rem 0;
+}
+
+.answer {
+  font-size: inherit;
+  color: var(--clr-gray);
+  grid-column: 1 / -1;
+}
+
+.answer.hidden {
+  display: none;
+}
+
+.icon {
+  cursor: pointer;
+  width: 2.6rem;
+  height: 2.6rem;
+}
+
+.faq-icon {
+  height: 55px;
+}
+.icon:hover {
+  padding: 0.1rem;
+  background-color: var(--clr-bg);
+  border-radius: 50%;
+}
+
+@media (max-width: 48em) {
+  body::before {
+    background-image: url("/public/svgs/background-pattern-mobile.jpg");
+  }
+
+  h1 {
+    font-size: 3.2rem;
+  }
+
+  .faq-icon {
+    height: 40px;
+  }
 }
